move some functionality from play to new mode report

--- a/README.org
+++ b/README.org
@@ -45,6 +45,7 @@
   - quiz: Train your ear and musical memory
   - licks: Learn licks (licks not included, but some pointers)
   - play: Play scales, holes or licks
+  - report: Produce reports about licks and your playing history
   - calibrate: Generate samples for holes or record your own
 
   As an initial step you will need to calibrate the program; the resulting
