compare man page with usage

--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -93,7 +93,9 @@ harpwise listen blues
 
 The possible scales depend on the chosen type of harmonica:
 
-<%=types_content%>
+scales for chromatic: all, blues, major, major_pentatonic, one, two
+  scales for richter: all, blues, chord-i, chord-iv, chord-v, drawbends, 
+    major_pentatonic, middle, minor_pentatonic, root
   
 .SH OPTIONS
 
@@ -125,7 +127,7 @@ See the usage information of the individual modes.
 .SH COPYRIGHT
 
 .PP
-Version <%=$version%>
+Version 3.10.4
 .br
 Copyright (c) 2021-2022 by Marc Ihm (marc@ihm.name) 
 .br
@@ -134,4 +136,3 @@ This program is subject to the MIT License.
 .SH SEE ALSO
 
 Again, the usage information of the individual modes.
-
