--- a/images/README.org
+++ b/images/README.org
@@ -1,6 +1,6 @@
 * Source and lincense information about these images
 
-  Pictures (camera or screenshot) by Marc Ihm subject to MIT License.
+  Pictures (camera or screenshot) by Marc Ihm, subject to MIT License.
 
 * How to produce screenshots
 
