--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -97,6 +97,7 @@ The possible scales depend on the chosen type of harmonica:
 scales for chromatic: all, blues, major, major_pentatonic, one, two
   scales for richter: all, blues, chord-i, chord-iv, chord-v, drawbends, 
     major_pentatonic, middle, minor_pentatonic, root
+  scales for testing2: all, blues, major, major_pentatonic, one, two
   
 .SH OPTIONS
 
@@ -128,7 +129,6 @@ See the usage information of the individual modes.
 .SH COPYRIGHT
 
 .PP
-Version 3.12.0
 .br
 Copyright (c) 2021-2022 by Marc Ihm (marc@ihm.name) 
 .br
