--- a/README.org
+++ b/README.org
@@ -8,6 +8,9 @@
   or licks on a diatonic (richter) or chromatic harmonica for various
   keys.
 
+  harpwise is limited to play and recognice single notes only, so that
+  e.g. chords or octaves are out of its reach.
+
   Its main operation modes are 'listen', 'quiz' and 'licks'; these
   modes may help to:
 
