--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -24,6 +24,9 @@
 scales, intervals or licks on a diatonic (richter) or chromatic
 harmonica for various keys.
 
+The wise is limited to play and recognice single notes only, so that
+e.g. chords or octaves are out of its reach.
+
 The primary documentation of harpwise is its usage information, that
 can be retrieved by calling it without arguments:
 .IP
