--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -24,7 +24,7 @@
 scales, intervals or licks on a diatonic (richter) or chromatic
 harmonica for various keys.
 
-The wise is limited to play and recognice single notes only, so that
+The wise is limited to play and recognize single notes only, so that
 e.g. chords or octaves are out of its reach.
 
 The primary documentation of harpwise is its usage information, that
