--- a/README.org
+++ b/README.org
@@ -8,8 +8,10 @@
   or licks on a diatonic (richter) or chromatic harmonica for various
   keys.
 
-  harpwise is limited to play and recognize single notes only, so that
-  e.g. chords or octaves are out of its reach.
+  harpwise is limited to play and recognize single notes only; it has no
+  sense of chords or grooves. So from the three ingredients of music,
+  melody, harmony and rhythm, it can help you with the melody only.
+
 
   Its main operation modes are 'listen', 'quiz' and 'licks'; these
   modes may help to:
