--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -41,8 +41,8 @@ them).
 
 .SH MODE
 
-The first argument on the commandline specifies the mode of operation;
-it can be one of:
+When invoking harpwise, the first argument on the commandline
+specifies the mode of operation; it can be one of:
 .IP - 2
 .B listen:
 The wise listens to your playing, e.g. to monitor bends or scales
@@ -60,7 +60,7 @@ Wise plays scales, holes or licks
 Produce reports about licks and tags or a journal of licks played
 .IP -
 .B calibrate: 
-Wise generates samples for holes, or you record your own
+Wise generates samples for holes, or assists in recording your own
 .RE
 
 to read more details, usage examples and options for the individual
