--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -109,7 +109,7 @@ Besides the arguments for type, key and scale, there are a lot of
 options (introduced by '-'), some requiring an argument themselves.
 All options are described in the usage info of the various modes.
 
-Most arguments and options can be abreviated, e.g 'lis'
+Most arguments and options can be abbreviated, e.g 'lis'
 for 'listen', 'cal' for 'calibrate' or '-t' for '--tags-any'.
 
 Also note, that for most modes, the behaviour (e.g. the kind of
