--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -100,7 +100,7 @@ The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, major, major_pentatonic, one, two
   scales for richter: all, blues, chord-i, chord-iv, chord-v, drawbends, 
-    major_pentatonic, middle, minor_pentatonic, root
+    major_pentatonic, middle, minor_pentatonic, mixolydian, root
   scales for testing2: all, blues, major, major_pentatonic, one, two
   
 .SH OPTIONS
