--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -61,6 +61,9 @@ Produce reports about licks and tags or a journal of licks played
 .IP -
 .B calibrate: 
 Wise generates samples for holes, or assists in recording your own
+.IP -
+.B tools: 
+A collection of simple, non-interactive tools
 .RE
 
 to read more details, usage examples and options for the individual
