a third builtin lick

--- a/recordings/README.org
+++ b/recordings/README.org
@@ -1,12 +1,14 @@
-Regarding the copyrights of the licks in this directory:
+The licks in this directory are short phrases taken from these songs:
 
-- "Wade in the water", according to Wikipedia, is an "African American
-  jubilee song", whose lyrics were first published in 1901
+- "Wade in the water" an "African American jubilee song", whose lyrics
+  were first published in 1901.
 
-- "The Saint Louis Blues" (or "St. Louis Blues"), according to
-  Wikipedia, is a popular American song composed by W. C. Handy and
-  published in September 1914.
+- "The Saint Louis Blues" is a popular American song composed by
+  W. C. Handy and published in September 1914.
 
-The actual recordings in this directory are only one short lick from
-each song and were done by me (Marc Ihm) on an A-Harmonica.
+- "Going Down The Road Feeling Bad" is a traditional American folk
+  song; the first known recording is from 1923 by Henry Whitter.
 
+(mostly citing the Wikipedia)
+
+The actual recordings in this directory are done by me (Marc Ihm).
