--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -101,7 +101,7 @@ harpwise listen blues
 
 The possible scales depend on the chosen type of harmonica:
 
-scales for chromatic: all, blues, major, major_pentatonic, one, two
+scales for chromatic: all, blues, one, two
   scales for richter: all, blues, chord-i, chord-iv, chord-v, drawbends, 
     major_pentatonic, middle, minor_pentatonic, mixolydian, root
   
