bring doku in match

--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -51,7 +51,7 @@ The wise listens to your playing, e.g. to monitor bends or scales
 Train your ear and musical memory
 .IP -
 .B licks: 
-Learn licks (licks not included, but some pointers)
+Learn licks (only licks three included, but some pointers)
 .IP -
 .B play: 
 Wise plays scales, holes or licks
@@ -59,11 +59,11 @@ Wise plays scales, holes or licks
 .B report: 
 Produce reports about licks and tags or a journal of licks played
 .IP -
+.B tools: 
+A collection of simple, non-interactive tools related to basic harmonica theory		
+.IP -
 .B calibrate: 
 Wise generates samples for holes, or assists in recording your own
-.IP -
-.B tools: 
-A collection of simple, non-interactive tools
 .RE
 
 to read more details, usage examples and options for the individual
