--- a/README.org
+++ b/README.org
@@ -7,10 +7,10 @@
   Ruby script to support the daily practice of bends, scales, intervals or
   licks on a diatonic (richter) or chromatic harmonica for various keys.
 
-  harpwise is limited to play and recognize single notes only; it has no
-  sense of chords or grooves. So from the three ingredients of music,
-  melody, harmony and rhythm, it can help you with the melody only and a bit
-  with harmony too, if you play your chords as arpeggios.
+  Please note, that harpwise is limited to play and recognize single notes
+  only; it has no sense of chords or grooves. So among the three
+  ingredients of music, i.e. melody, harmony and rhythm, it can only help
+  you with melody and (to some extent) harmony.
 
 
   Its main operation modes are 'listen', 'quiz' and 'licks'; these
