--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -52,15 +52,23 @@ Train your ear and musical memory
 .IP -
 .B licks: 
 Learn licks (only licks three included, but some pointers)
-.IP -
+.RE
+
+and, perhaps less frequently used:
+
+
+.IP - 2
 .B play: 
-Wise plays scales, holes or licks
+Wise plays scales, holes or licks, not asking you to play them back
+.IP -
+.B print:
+print and annottate the holes of scales or licks from the commandline
 .IP -
 .B report: 
 Produce reports about licks and tags or a journal of licks played
 .IP -
 .B tools: 
-A collection of simple, non-interactive tools related to basic harmonica theory		
+Some simple, non-interactive tools related to basic harmonica theory		
 .IP -
 .B calibrate: 
 Wise generates samples for holes, or assists in recording your own
