--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -110,8 +110,8 @@ harpwise listen blues
 The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, one, two
-  scales for richter: all, blues, chord-i, chord-iv, chord-v, drawbends, 
-    major_pentatonic, middle, minor_pentatonic, mixolydian, root
+  scales for richter: all, blues, blues-middle, chord-i, chord-iv, chord-v, 
+    drawbends, major_pentatonic, middle, minor_pentatonic, mixolydian, root
   
 .SH "OPTIONS"
 
