adjust to usage

--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -111,7 +111,8 @@ The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, one, two
   scales for richter: all, blues, blues-middle, chord-i, chord-iv, chord-v, 
-    drawbends, major_pentatonic, middle, minor_pentatonic, mixolydian, root
+    drawbends, major_pentatonic, mape, middle, minor_pentatonic, mixolydian, 
+    root
   
 .SH "OPTIONS"
 
