transpose and highlight table of key-positions

--- a/resources/keys-positions.org
+++ b/resources/keys-positions.org
@@ -1,28 +1,27 @@
-  | Keys of Harp in various Positions     | Semi    |
-  | (Key of Song is Key of Harp in 1st)   | tones   |
-  |---------+---------+---------+---------+---------|
-  | 1st Pos | 2nd Pos | 3rd Pos | 4th Pos | 1st Pos |
-  |---------+---------+---------+---------+---------|
-  | G       | C       | F       | As, Bf  |     %s |
-  |---------+---------+---------+---------+---------|
-  | Gs, Af  | Cs, Df  | Fs, Gf  | B       |     %s |
-  |---------+---------+---------+---------+---------|
-  | A       | D       | G       | C       |     %s |
-  |---------+---------+---------+---------+---------|
-  | As, Bf  | Ds, Ef  | Gs, Af  | Cs, Df  |     %s |
-  |---------+---------+---------+---------+---------|
-  | B       | E       | A       | D       |     %s |
-  |---------+---------+---------+---------+---------|
-  | C       | F       | As, Bf  | Ds, Ef  |     %s |
-  |---------+---------+---------+---------+---------|
-  | Cs, Df  | Fs, Gf  | B       | E       |     %s |
-  |---------+---------+---------+---------+---------|
-  | D       | G       | C       | F       |     %s |
-  |---------+---------+---------+---------+---------|
-  | Ds, Ef  | Gs, Af  | Cs, Df  | Fs, Gf  |     %s |
-  |---------+---------+---------+---------+---------|
-  | E       | A       | D       | G       |     %s |
-  |---------+---------+---------+---------+---------|
-  | F       | As, Bf  | Ds, Ef  | Gs, Af  |     %s |
-  |---------+---------+---------+---------+---------|
-  | Fs, Gf  | B       | E       | A       |     %s |
+|         | Keys of Song in respective Position   |       |
+| Key of  |---------+---------+---------+---------| Semi  |
+| Harp    | 1st Pos | 2nd Pos | 3rd Pos | 4th Pos | tones |
+|---------+---------+---------+---------+---------+-------|
+| G       | G       | D       | A       | E       |   %s |
+|---------+---------+---------+---------+---------+-------|
+| Gs, Af  | Gs, Af  | Ds, Ef  | As, Bf  | F       |   %s |
+|---------+---------+---------+---------+---------+-------|
+| A       | A       | E       | B       | Fs, Gf  |   %s |
+|---------+---------+---------+---------+---------+-------|
+| As, Bf  | As, Bf  | F       | C       | G       |   %s |
+|---------+---------+---------+---------+---------+-------|
+| B       | B       | Fs, Gf  | Cs, Df  | Gs, Af  |   %s |
+|---------+---------+---------+---------+---------+-------|
+| C       | C       | G       | D       | A       |   %s |
+|---------+---------+---------+---------+---------+-------|
+| Cs, Df  | Cs, Df  | Gs, Af  | Ds, Ef  | As, Bf  |   %s |
+|---------+---------+---------+---------+---------+-------|
+| D       | D       | A       | E       | B       |   %s |
+|---------+---------+---------+---------+---------+-------|
+| Ds, Ef  | Ds, Ef  | As, Bf  | F       | C       |   %s |
+|---------+---------+---------+---------+---------+-------|
+| E       | E       | B       | Fs, Gf  | Cs, Df  |   %s |
+|---------+---------+---------+---------+---------+-------|
+| F       | F       | C       | G       | D       |   %s |
+|---------+---------+---------+---------+---------+-------|
+| Fs, Gf  | Fs, Gf  | Cs, Df  | Gs, Af  | Ds, Ef  |   %s |
